82 token endpoints (#93)
* feat: frontend added

* feat: roles endpoints added
